# docsis-monitor

./: .commitlintrc.json  .editorconfig  .env.example  .eslintrc.json  .gitattributes  .gitignore  .gitleaks.toml  .markdownlint.yml  .pre-commit-config.yaml  .prettierrc.json  .yamllint.yml  CHANGELOG.md  LICENSE  Makefile  README.md  cliff.toml  docker-compose.yml  package.json  prometheus.yml  pyproject.toml  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  codeql-config.yml  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: adr-auto.yml  auto-label.yml  branch-protection-check.yml  build-sign-attest.yml  cd.yml  changelog.yml  ci.yml  codeql.yml  dco.yml  dependency-review.yml  docs-build.yml  gitleaks.yml  release.yml  slsa.yml  stale.yml
backend/: Dockerfile  alerting.py  config.py  database.py  diagnostics.py  main.py  metrics.py  models.py  requirements.txt  scraper.py
deploy/: proxmox-lxc.md  tailscale-serve.json
frontend/: Dockerfile
frontend/public/: diagnostics.html  downstream.html  index.html  logs.html  overview.html  shared.css  upstream.html
grafana/: Dockerfile
grafana/dashboards/: docsis.json
nginx/: Dockerfile  nginx.conf
nginx/conf.d/: auth.conf  docsis.conf
prometheus/: Dockerfile  prometheus.yml
scripts/: bootstrap.sh  ci-local.sh
src/: __init__.py  main.py
tests/: conftest.py  test_alerting.py  test_diagnostics.py  test_models.py  test_scraper.py
(+7 files in other folders)
